syntax = "proto3";
package caerus.notifications.v1;

option go_package = "github.com/desmos-labs/caerus/routes/notifications";

import "google/protobuf/empty.proto";

service NotificationsService {
  rpc SendNotification(SendNotificationRequest) returns (google.protobuf.Empty);
}

message SendNotificationRequest {
  // UserAddresses represent the addresses of the users to which send the notification
  repeated string user_addresses = 1;

  // Notification contains the JSON-encoded data of the notification to be sent.
  bytes notification = 2;
}